[package]
name = "leetcode_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
cli-table = "0.4.6"


[dependencies.tokio]
version = "1"
features = ["full"]